--- a/cases/function/v040/test_load_data.yaml
+++ b/cases/function/v040/test_load_data.yaml
@@ -68,12 +68,14 @@ cases:
       - LOAD DATA INFILE 'hdfs://m7-common-cdh02:8022/user/zhaowei/openmldb/load_data/user/zhaowei/openmldb/load_data/parquet' INTO TABLE {0} options(format='parquet',foo='bar',deep_copy=false,header=false,mode='append');
       - SHOW JOBS;
     expect:
+
+
   -
     id: 2
-    desc: 集群版，EXECUTE_MODE=online，load csv文件
+    desc: 集群版，EXECUTE_MODE=online，load csv文件，mode默认不写
     inputs:
       -
-        columns: ["id int","job_state string","state string","start_time timestamp","end_time timestamp","parameter string","cluster string","application_id string","error string"]
+        columns: ["id int","c1_smallint smallint","c2_int int","c3_bigint bigint","c4_float float","c5_double double","c6_string string","c7_timestamp bigint","c8_date date","c9_bool bool"]
         create: |
           create table {0}(
               id int,
@@ -83,14 +85,14 @@ cases:
               c4_float float,
               c5_double double,
               c6_string string,
-              c7_timestamp timestamp,
+              c7_timestamp bigint,
               c8_date date,
               c9_bool bool,
               index(key=c6_string,ts=c7_timestamp,ttl=0m,ttl_type=absolute)
           )options(partitionnum = 1,replicanum = 1);
     sqls:
       - set @@SESSION.execute_mode = "online";
-      - LOAD DATA INFILE 'hdfs://m7-common-cdh02:8022/user/zhaowei/openmldb/load_data/csv-import-10000-1.csv' INTO TABLE {0} options(format='csv',foo='bar',deep_copy=false,header=false,mode='append');
+      - load data infile 'hdfs://m7-common-cdh02:8022/user/zhaowei/openmldb/load_data/csv-import-10000-1.csv' into table {0};
       - SHOW JOBS;
     expect:
       columns: ["id int","job_state string","state string","start_time timestamp","end_time timestamp","parameter string","cluster string","application_id string","error string"]
@@ -99,10 +101,10 @@ cases:
                 "local","local-1640683224470",""]
   -
     id: 3
-    desc: 集群版，EXECUTE_MODE=offline，load csv文件
+    desc: 集群版，execute_mode=online, load csv文件,mode=append
     inputs:
       -
-        columns: ["id int","job_state string","state string","start_time timestamp","end_time timestamp","parameter string","cluster string","application_id string","error string"]
+        columns: ["id int","c1_smallint smallint","c2_int int","c3_bigint bigint","c4_float float","c5_double double","c6_string string","c7_timestamp bigint","c8_date date","c9_bool bool"]
         create: |
           create table {0}(
               id int,
@@ -112,16 +114,266 @@ cases:
               c4_float float,
               c5_double double,
               c6_string string,
-              c7_timestamp timestamp,
+              c7_timestamp bigint,
               c8_date date,
               c9_bool bool,
               index(key=c6_string,ts=c7_timestamp,ttl=0m,ttl_type=absolute)
           )options(partitionnum = 1,replicanum = 1);
     sqls:
       - set @@SESSION.execute_mode = "online";
-      - LOAD DATA INFILE 'hdfs://m7-common-cdh02:8022/user/zhaowei/openmldb/load_data/csv-import-10000-1.csv' INTO TABLE {0} options(format='csv',foo='bar',deep_copy=false,header=false,mode='append');
+      - load data infile 'hdfs://m7-common-cdh02:8022/user/zhaowei/openmldb/load_data/csv-import-10000-1.csv' into table {0} options(mode='append');
       - SHOW JOBS;
     expect:
+
+  -
+    id: 4
+    desc: 集群版，execute_mode=online, load csv文件,mode=overwrite
+    inputs:
+      -
+        columns: ["id int","c1_smallint smallint","c2_int int","c3_bigint bigint","c4_float float","c5_double double","c6_string string","c7_timestamp bigint","c8_date date","c9_bool bool"]
+        create: |
+          create table {0}(
+              id int,
+              c1_smallint smallint,
+              c2_int int,
+              c3_bigint bigint,
+              c4_float float,
+              c5_double double,
+              c6_string string,
+              c7_timestamp bigint,
+              c8_date date,
+              c9_bool bool,
+              index(key=c6_string,ts=c7_timestamp,ttl=0m,ttl_type=absolute)
+          )options(partitionnum = 1,replicanum = 1);
+    sqls:
+      - set @@SESSION.execute_mode = "online";
+      - load data infile 'hdfs://m7-common-cdh02:8022/user/zhaowei/openmldb/load_data/csv-import-10000-1.csv' into table {0} options(mode='overwrite');
+      - SHOW JOBS;
+    expect:
+  -
+    id: 5
+    desc: 集群版，集群版 execute_mode=offline, load csv文件,deep_copy=true, mode默认不写,如果文件不存在
+    inputs:
+      -
+        columns: ["id int","c1_smallint smallint","c2_int int","c3_bigint bigint","c4_float float","c5_double double","c6_string string","c7_timestamp bigint","c8_date date","c9_bool bool"]
+        create: |
+          create table {0}(
+              id int,
+              c1_smallint smallint,
+              c2_int int,
+              c3_bigint bigint,
+              c4_float float,
+              c5_double double,
+              c6_string string,
+              c7_timestamp bigint,
+              c8_date date,
+              c9_bool bool,
+              index(key=c6_string,ts=c7_timestamp,ttl=0m,ttl_type=absolute)
+          )options(partitionnum = 1,replicanum = 1);
+    sqls:
+      - set @@SESSION.execute_mode = "offline";
+      - load data infile 'hdfs://m7-common-cdh02:8022/user/zhaowei/openmldb/load_data/csv-import-10000-1.csv' into table {0} options(deep_copy=true);
+      - SHOW JOBS;
+    expect:
+
+  -
+    id: 6
+    desc: 集群版 execute_mode=offline, load csv文件,deep_copy=true, mode默认不写,如果文件存在
+    inputs:
+      -
+        columns: ["id int","c1_smallint smallint","c2_int int","c3_bigint bigint","c4_float float","c5_double double","c6_string string","c7_timestamp bigint","c8_date date","c9_bool bool"]
+        create: |
+          create table {0}(
+              id int,
+              c1_smallint smallint,
+              c2_int int,
+              c3_bigint bigint,
+              c4_float float,
+              c5_double double,
+              c6_string string,
+              c7_timestamp bigint,
+              c8_date date,
+              c9_bool bool,
+              index(key=c6_string,ts=c7_timestamp,ttl=0m,ttl_type=absolute)
+          )options(partitionnum = 1,replicanum = 1);
+    sqls:
+      - set @@SESSION.execute_mode = "offline";
+      - load data infile 'hdfs://m7-common-cdh02:8022/user/zhaowei/openmldb/load_data/csv-import-10000-1.csv' into table {0} options(deep_copy=true);
+      - SHOW JOBS;
+    expect:
+
+  -
+    id: 7
+    desc: 集群版 execute_mode=offline, load csv文件, deep_copy=true, mode=append
+    inputs:
+      -
+        columns: ["id int","c1_smallint smallint","c2_int int","c3_bigint bigint","c4_float float","c5_double double","c6_string string","c7_timestamp bigint","c8_date date","c9_bool bool"]
+        create: |
+          create table {0}(
+              id int,
+              c1_smallint smallint,
+              c2_int int,
+              c3_bigint bigint,
+              c4_float float,
+              c5_double double,
+              c6_string string,
+              c7_timestamp bigint,
+              c8_date date,
+              c9_bool bool,
+              index(key=c6_string,ts=c7_timestamp,ttl=0m,ttl_type=absolute)
+          )options(partitionnum = 1,replicanum = 1);
+    sqls:
+      - set @@SESSION.execute_mode = "offline";
+      - load data infile 'hdfs://m7-common-cdh02:8022/user/zhaowei/openmldb/load_data/csv-import-10000-1.csv' into table {0} options(deep_copy=true,mode='append');
+      - SHOW JOBS;
+    expect:
+  -
+    id: 8
+    desc: 集群版 execute_mode=offline, load csv文件, deep_copy=true, mode=overwrite
+    inputs:
+      -
+        columns: ["id int","c1_smallint smallint","c2_int int","c3_bigint bigint","c4_float float","c5_double double","c6_string string","c7_timestamp bigint","c8_date date","c9_bool bool"]
+        create: |
+          create table {0}(
+              id int,
+              c1_smallint smallint,
+              c2_int int,
+              c3_bigint bigint,
+              c4_float float,
+              c5_double double,
+              c6_string string,
+              c7_timestamp bigint,
+              c8_date date,
+              c9_bool bool,
+              index(key=c6_string,ts=c7_timestamp,ttl=0m,ttl_type=absolute)
+          )options(partitionnum = 1,replicanum = 1);
+    sqls:
+      - set @@SESSION.execute_mode = "offline";
+      - load data infile 'hdfs://m7-common-cdh02:8022/user/zhaowei/openmldb/load_data/csv-import-10000-1.csv' into table {0} options(deep_copy=true,mode='overwrite');
+      - SHOW JOBS;
+    expect:
+  -
+    id: 9
+    desc: 集群版 execute_mode=offline, load csv文件, deep_copy=false, mode=append
+    inputs:
+      -
+        columns: ["id int","c1_smallint smallint","c2_int int","c3_bigint bigint","c4_float float","c5_double double","c6_string string","c7_timestamp bigint","c8_date date","c9_bool bool"]
+        create: |
+          create table {0}(
+              id int,
+              c1_smallint smallint,
+              c2_int int,
+              c3_bigint bigint,
+              c4_float float,
+              c5_double double,
+              c6_string string,
+              c7_timestamp bigint,
+              c8_date date,
+              c9_bool bool,
+              index(key=c6_string,ts=c7_timestamp,ttl=0m,ttl_type=absolute)
+          )options(partitionnum = 1,replicanum = 1);
+    sqls:
+      - set @@SESSION.execute_mode = "offline";
+      - load data infile 'hdfs://m7-common-cdh02:8022/user/zhaowei/openmldb/load_data/csv-import-10000-1.csv' into table {0} options(deep_copy=false,mode='append');
+      - SHOW JOBS;
+    expect:
+  -
+    id: 10
+    desc: 集群版 execute_mode=offline, load csv文件, deep_copy=false, mode=overwrite
+    inputs:
+      -
+        columns: ["id int","c1_smallint smallint","c2_int int","c3_bigint bigint","c4_float float","c5_double double","c6_string string","c7_timestamp bigint","c8_date date","c9_bool bool"]
+        create: |
+          create table {0}(
+              id int,
+              c1_smallint smallint,
+              c2_int int,
+              c3_bigint bigint,
+              c4_float float,
+              c5_double double,
+              c6_string string,
+              c7_timestamp bigint,
+              c8_date date,
+              c9_bool bool,
+              index(key=c6_string,ts=c7_timestamp,ttl=0m,ttl_type=absolute)
+          )options(partitionnum = 1,replicanum = 1);
+    sqls:
+      - set @@SESSION.execute_mode = "offline";
+      - load data infile 'hdfs://m7-common-cdh02:8022/user/zhaowei/openmldb/load_data/csv-import-10000-1.csv' into table {0} options(deep_copy=false,mode='overwrite');
+      - desc {0};
+    expect:
+  -
+    id: 11
+    desc: 集群版 execute_mode=offline, load csv文件, deep_copy=false,mode默认不写，没有load
+    inputs:
+      -
+        columns: ["id int","c1_smallint smallint","c2_int int","c3_bigint bigint","c4_float float","c5_double double","c6_string string","c7_timestamp bigint","c8_date date","c9_bool bool"]
+        create: |
+          create table {0}(
+              id int,
+              c1_smallint smallint,
+              c2_int int,
+              c3_bigint bigint,
+              c4_float float,
+              c5_double double,
+              c6_string string,
+              c7_timestamp bigint,
+              c8_date date,
+              c9_bool bool,
+              index(key=c6_string,ts=c7_timestamp,ttl=0m,ttl_type=absolute)
+          )options(partitionnum = 1,replicanum = 1);
+    sqls:
+      - set @@SESSION.execute_mode = "offline";
+      - load data infile 'hdfs://m7-common-cdh02:8022/user/zhaowei/openmldb/load_data/csv-import-10000-1.csv' into table {0} options(deep_copy=false);
+      - desc {0};
+    expect:
+  -
+    id: 12
+    desc: 集群版 execute_mode=offline, load csv文件, deep_copy=false,mode默认不写，已经load过
+    inputs:
+      -
+        columns: ["id int","c1_smallint smallint","c2_int int","c3_bigint bigint","c4_float float","c5_double double","c6_string string","c7_timestamp bigint","c8_date date","c9_bool bool"]
+        create: |
+          create table {0}(
+              id int,
+              c1_smallint smallint,
+              c2_int int,
+              c3_bigint bigint,
+              c4_float float,
+              c5_double double,
+              c6_string string,
+              c7_timestamp bigint,
+              c8_date date,
+              c9_bool bool,
+              index(key=c6_string,ts=c7_timestamp,ttl=0m,ttl_type=absolute)
+          )options(partitionnum = 1,replicanum = 1);
+    sqls:
+      - set @@SESSION.execute_mode = "offline";
+      - load data infile 'hdfs://m7-common-cdh02:8022/user/zhaowei/openmldb/load_data/csv-import-10000-1.csv' into table {0} options(deep_copy=false);
+      - desc {0};
+    expect:
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
   -
     id: 4
     desc: 集群版，EXECUTE_MODE=offline，load parquet文件，method=duplicate
