--- a/release/conf/taskmanager.properties
+++ b/release/conf/taskmanager.properties
@@ -7,8 +7,8 @@ prefetch.jobid.num=1
 job.log.path=./logs/
 
 # OpenMLDB Config
-zookeeper.cluster=0.0.0.0:6181
-zookeeper.root_path=/onebox
+zookeeper.cluster=0.0.0.0:2181
+zookeeper.root_path=/openmldb
 zookeeper.session_timeout=5000
 zookeeper.connection_timeout=5000
 zookeeper.max_retries=10
